--- a/TopShelfCustomer/TopShelfCustomer/Views/PasswordRetrievalView.xaml
+++ b/TopShelfCustomer/TopShelfCustomer/Views/PasswordRetrievalView.xaml
@@ -3,6 +3,10 @@
     <ContentPage.BindingContext>
         <vm:PasswordRetrievalViewModel/>
     </ContentPage.BindingContext>
+    <ContentPage.BackgroundImageSource>
+        <FileImageSource File="gradient_background.png" />
+    </ContentPage.BackgroundImageSource>
+
     <ContentPage.Content>
         <Grid BackgroundColor="{StaticResource AccentLight}" >
             <Grid.RowDefinitions>
@@ -13,7 +17,7 @@
 
             <!-- Header (Label, App Icon, etc.) -->
             <ContentView HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"
-                     BackgroundColor="{StaticResource Accent}" Grid.Row="0" Padding="0, 0, 0, 40" >
+                     Grid.Row="0" Padding="0, 0, 0, 40" >
                 <StackLayout Orientation="Vertical">
                     <ImageButton Source="back_orange.png" Command="{Binding NavigateBackCommand}" HorizontalOptions="Start" Margin="10,40,0,0" HeightRequest="40"/>
                     <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Spacing="15">
@@ -43,7 +47,7 @@
                             IsVisible="{Binding IsErrorVisible}" HorizontalTextAlignment="Center" FontAttributes="Bold"/>
 
                     <!-- Submit Button -->
-                    <Button Command="{Binding RequestPasswordResetCommand}" BackgroundColor="{StaticResource Primary}" Text="Request Reset Email"
+                    <Button Command="{Binding RequestPasswordResetCommand}" BackgroundColor="#424C55" Text="Request Reset Email"
                         FontSize="18" TextColor="White" HeightRequest="50" FontFamily="{StaticResource MediumFont}"
                         Margin="40,40,40,30" BorderColor="Black" BorderWidth="2"/>
 
