--- a/TopShelfCustomer/TopShelfCustomer/Views/LoginPage.xaml
+++ b/TopShelfCustomer/TopShelfCustomer/Views/LoginPage.xaml
@@ -3,10 +3,13 @@
     <ContentPage.BindingContext>
         <vm:LoginViewModel/>
     </ContentPage.BindingContext>
+    <ContentPage.BackgroundImageSource>
+        <FileImageSource File="gradient_background.png" />
+    </ContentPage.BackgroundImageSource>
 
     <ContentPage.Content>
         <ScrollView>
-            <Grid BackgroundColor="{StaticResource AccentLight}">
+            <Grid>
 
                 <!-- RowDefinitions -->
                 <Grid.RowDefinitions>
@@ -16,7 +19,7 @@
 
                 <!-- Header (Label, App Icon, etc.) -->
                 <ContentView HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"
-                         BackgroundColor="{StaticResource Accent}" Grid.Row="0" Padding="0, 40, 0, 40" >
+                         Grid.Row="0" Padding="0, 40, 0, 40" >
                     <StackLayout Orientation="Vertical" Spacing="20">
                         <Image Source="TopShelfAppLogo.png" HeightRequest="100"/>
                         <Label Text="Log into TopShelf" FontSize="26" HorizontalOptions="Center" TextColor="White" FontFamily="{StaticResource MediumFont}"/>
@@ -66,7 +69,7 @@
                     <!-- Login Button and Account Recovery -->
                     <ContentView HorizontalOptions="FillAndExpand" VerticalOptions="CenterAndExpand" Grid.Row="1" Padding="0, 60, 0, 0">
                         <StackLayout Orientation="Vertical" Spacing="0">
-                            <Button Command="{Binding LoginCommand}" BackgroundColor="#f15a22" WidthRequest="240"
+                            <Button Command="{Binding LoginCommand}" BackgroundColor="#424C55" WidthRequest="240"
                                     BorderColor="Black" BorderWidth="2"
                                     HeightRequest="50" TextColor="White" FontFamily="{StaticResource MediumFont}"
                                     Text="Log In" Grid.Row="2" HorizontalOptions="Center" VerticalOptions="Start" FontSize="22"/>
