--- a/TopShelfCustomer/TopShelfCustomer/Views/AboutPage.xaml
+++ b/TopShelfCustomer/TopShelfCustomer/Views/AboutPage.xaml
@@ -4,7 +4,10 @@
         <vm:AboutViewModel />
     </ContentPage.BindingContext>
     <ContentPage.BackgroundImageSource>
-        <FileImageSource File="gradient_background.png" />
+        <OnPlatform x:TypeArguments="FileImageSource">
+            <On Platform="Android" Value="gradient_background_droid.png" />
+            <On Platform="iOS" Value="gradient_background.png" />
+        </OnPlatform>
     </ContentPage.BackgroundImageSource>
     <Grid>
         <Grid.RowDefinitions>
@@ -28,9 +31,9 @@
                     <Label.FormattedText>
                         <FormattedString>
                             <FormattedString.Spans>
-                                <Span Text="TopShelf" FontFamily="{StaticResource MediumFont}" FontSize="22" TextColor="{StaticResource Accent}"/>
+                                <Span Text="TopShelf" FontFamily="{StaticResource MediumFont}" FontSize="22" TextColor="White" />
                                 <Span Text=" " />
-                                <Span Text="0.1a" ForegroundColor="{StaticResource Accent}" />
+                                <Span Text="0.1a" TextColor="White" />
                             </FormattedString.Spans>
                         </FormattedString>
                     </Label.FormattedText>
@@ -39,9 +42,9 @@
                     <Label.FormattedText>
                         <FormattedString>
                             <FormattedString.Spans>
-                                <Span Text="This app is written in C# and native APIs using the" />
+                                <Span Text="This app is written in C# and native APIs using the" TextColor="White"/>
                                 <Span Text=" " />
-                                <Span Text="Xamarin Platform" FontFamily="{StaticResource MediumFont}" TextColor="{StaticResource Accent}" />
+                                <Span Text="Xamarin Platform" TextColor="White" FontFamily="{StaticResource MediumFont}" />
                                 <Span Text="." />
                             </FormattedString.Spans>
                         </FormattedString>
@@ -51,9 +54,9 @@
                     <Label.FormattedText>
                         <FormattedString>
                             <FormattedString.Spans>
-                                <Span Text="The development of this app was a part of the "/>
-                                <Span Text="CS 3773-002 Software Engineering " FontFamily="{StaticResource MediumFont}" TextColor="{StaticResource Accent}" />
-                                <Span Text="course." />
+                                <Span Text="The development of this app was a part of the " TextColor="White"/>
+                                <Span Text="CS 3773-002 Software Engineering " FontFamily="{StaticResource MediumFont}" TextColor="White" />
+                                <Span Text="course." TextColor="White" />
                             </FormattedString.Spans>
                         </FormattedString>
                     </Label.FormattedText>
@@ -62,32 +65,32 @@
                     <Label.FormattedText>
                         <FormattedString>
                             <FormattedString.Spans>
-                                <Span Text="The team members that contributed to this app were: " />
+                                <Span Text="The team members that contributed to this app were: " TextColor="White" />
                             </FormattedString.Spans>
                         </FormattedString>
                     </Label.FormattedText>
                 </Label>
-                <Label Text=" - Jackson Dumas" FontAttributes="Bold" TextColor="{StaticResource Accent}" FontFamily="{StaticResource NormalFont}"/>
-                <Label Text=" - Zachary Ellis" FontAttributes="Bold" TextColor="{StaticResource Accent}" FontFamily="{StaticResource NormalFont}"/>
-                <Label Text=" - Jacob Damon" FontAttributes="Bold" TextColor="{StaticResource Accent}" FontFamily="{StaticResource NormalFont}"/>
-                <Label Text=" - Nathaniel Barrett" FontAttributes="Bold" TextColor="{StaticResource Accent}" FontFamily="{StaticResource NormalFont}"/>
-                <Label Text=" - Alex Kokkosoulis" FontAttributes="Bold" TextColor="{StaticResource Accent}" FontFamily="{StaticResource NormalFont}"/>
+                <Label Text=" - Jackson Dumas" FontAttributes="Bold" TextColor="White" FontFamily="{StaticResource NormalFont}"/>
+                <Label Text=" - Zachary Ellis" FontAttributes="Bold" TextColor="White" FontFamily="{StaticResource NormalFont}"/>
+                <Label Text=" - Jacob Damon" FontAttributes="Bold" TextColor="White" FontFamily="{StaticResource NormalFont}"/>
+                <Label Text=" - Nathaniel Barrett" FontAttributes="Bold" TextColor="White" FontFamily="{StaticResource NormalFont}"/>
+                <Label Text=" - Alex Kokkosoulis" FontAttributes="Bold" TextColor="White" FontFamily="{StaticResource NormalFont}"/>
                 <Label FontFamily="{StaticResource NormalFont}">
                     <Label.FormattedText>
                         <FormattedString>
                             <FormattedString.Spans>
-                                <Span Text="It shares code with its" />
+                                <Span Text="It shares code with its" TextColor="White"/>
                                 <Span Text=" " />
-                                <Span Text="iOS and Android" FontFamily="{StaticResource MediumFont}" />
+                                <Span Text="iOS and Android" TextColor="White" FontFamily="{StaticResource MediumFont}" />
                                 <Span Text=" " />
-                                <Span Text="versions." />
+                                <Span Text="versions." TextColor="White" />
                             </FormattedString.Spans>
                         </FormattedString>
                     </Label.FormattedText>
                 </Label>
                 <Button Margin="0,30,0,0" Text="Learn more about Xamarin" WidthRequest="260" FontFamily="{StaticResource MediumFont}"
                         HorizontalOptions="Center" Command="{Binding OpenXamarinCommand}" BorderColor="Black" BorderWidth="2"
-                        BackgroundColor="{StaticResource Primary}" TextColor="White" />
+                        BackgroundColor="{StaticResource SpaceGray}" TextColor="White" />
             </StackLayout>
         </ScrollView>
     </Grid>
