--- a/TopShelfCustomer/TopShelfCustomer/Views/HomePage.xaml
+++ b/TopShelfCustomer/TopShelfCustomer/Views/HomePage.xaml
@@ -24,7 +24,7 @@
                 <StackLayout Orientation="Vertical" Margin="20, 0, 20, 0">
 
                     <!-- Profile Picture -->
-                    <Frame HorizontalOptions="Center" CornerRadius="34" WidthRequest="32" HeightRequest="32" HasShadow="True" BorderColor="{StaticResource Primary}">
+                    <Frame HorizontalOptions="Center" CornerRadius="34" WidthRequest="32" HeightRequest="32" HasShadow="True" BorderColor="{StaticResource Accent}">
                         <Image Source="portrait.png" />
                     </Frame>
 
@@ -53,7 +53,7 @@
 
                     <!-- Test Coupon One -->
                     <ContentView VerticalOptions="Start" HorizontalOptions="FillAndExpand" HeightRequest="220">
-                        <Frame BorderColor="{StaticResource Primary}" BackgroundColor="White">
+                        <Frame BorderColor="{StaticResource SpaceGray}" BackgroundColor="White">
                             <Label FontFamily="{StaticResource NormalFont}">
                                 <Label.FormattedText>
                                     <FormattedString>
@@ -154,7 +154,7 @@
             </ScrollView>
 
             <!-- Settings and Account Buttons -->
-            <StackLayout Orientation="Horizontal" Padding="10,10,10,30" Spacing="10" Grid.Row="2" BackgroundColor="{StaticResource AccentLight}">
+            <StackLayout Orientation="Horizontal" Padding="10,10,10,30" Spacing="10" Grid.Row="2">
                 <Button Command="{Binding OpenCreateOrderCommand}" Text="New Order" BackgroundColor="#424C55"
                         WidthRequest="80" HorizontalOptions="FillAndExpand" TextColor="White"
                         BorderColor="Black" BorderWidth="2" FontSize="16" FontFamily="{StaticResource MediumFont}"/>
