--- a/TopShelfCustomer/TopShelfCustomer/Views/ChooseStoreView.xaml
+++ b/TopShelfCustomer/TopShelfCustomer/Views/ChooseStoreView.xaml
@@ -15,43 +15,54 @@
         <Grid>
             <!-- Row Definitions -->
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
                 <RowDefinition Height="*" />
-                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
 
             <!-- Page Content -->
-            <ContentView Grid.Row="0">
+            <ContentView Margin="0, 40, 0, 40" VerticalOptions="FillAndExpand">
                 <StackLayout Orientation="Vertical" >
 
                     <!-- Back Button -->
-                    <ImageButton Source="back_orange.png" Command="{Binding NavigateBackCommand}" HorizontalOptions="Start" Margin="10,40,0,10" HeightRequest="40"/>
+                    <ImageButton Source="back_orange.png" Command="{Binding NavigateBackCommand}" HorizontalOptions="Start" Margin="10,0,0,10" HeightRequest="40"/>
 
                     <!-- Title Label -->
-                    <Label Text="Choose a Default Store" HorizontalOptions="CenterAndExpand" FontFamily="{StaticResource MediumFont}"
-                           VerticalOptions="FillAndExpand" Margin="0, 20, 0, 40" FontSize="30" TextColor="White" />
+                    <Label Text="Choose your Store" HorizontalOptions="CenterAndExpand" FontFamily="{StaticResource MediumFont}"
+                           VerticalOptions="CenterAndExpand" Margin="0, 30, 0, 30" FontSize="30" TextColor="White" />
 
                     <!-- ListView of Stores -->
-                    <ListView x:Name="StoreList" ItemsSource="{Binding NearbyStores}" RowHeight="60" SeparatorColor="Black" SelectionMode="None"
-                              BackgroundColor="{StaticResource AccentLight}" Margin="20, 0, 20, 0">
+                    <ListView x:Name="StoreList" ItemsSource="{Binding NearbyStores}" SeparatorColor="Black" SelectedItem="{Binding SelectedStore}"
+                              BackgroundColor="{StaticResource AccentLight}" Margin="20, 0, 20, 0" HasUnevenRows="True" VerticalOptions="FillAndExpand">
                         <ListView.ItemTemplate>
                             <DataTemplate>
                                 <ViewCell>
-                                    <StackLayout Orientation="Horizontal" Spacing="30" VerticalOptions="Center" Padding="30, 0, 30, 0">
-                                        <Label Text="{Binding StoreName}" FontFamily="{StaticResource MediumFont}" HorizontalOptions="Start" TextColor="White"/>
-                                        <Label Text="{Binding StoreAddress}" FontFamily="{StaticResource NormalFont}" HorizontalOptions="CenterAndExpand" TextColor="White"/>
+                                    <StackLayout Orientation="Vertical" Spacing="20" Padding="0, 10, 0, 10">
+                                        <!-- List Item Content -->
+                                        <StackLayout Orientation="Vertical" Spacing="10">
+                                            <!-- Store Image -->
+                                            <Image Source="{Binding StoreImage}" HeightRequest="50"/>
+                                            <!-- Store Name -->
+                                            <Label Text="{Binding Name}" FontFamily="{StaticResource MediumFont}" HorizontalTextAlignment="Center" HorizontalOptions="CenterAndExpand"
+                                                   VerticalTextAlignment="Center" TextColor="White" FontSize="20"/>
+                                            <!-- Store Address -->
+                                            <Label Text="{Binding Address}" FontFamily="{StaticResource NormalFont}" FontSize="18" Margin="0, 15, 0, 0"
+                                                       HorizontalOptions="CenterAndExpand" TextColor="White"/>
+                                            <!-- Directions Button -->
+                                            <Button Text="Directions" BackgroundColor="{StaticResource SpaceGray}" Command="{Binding GetDirectionsCommand}"
+                                                    BorderColor="Black" BorderWidth="1" FontFamily="{StaticResource MediumFont}"
+                                                    TextColor="White" WidthRequest="140" HorizontalOptions="Center" HeightRequest="40"/>
+                                        </StackLayout>
                                     </StackLayout>
                                 </ViewCell>
                             </DataTemplate>
                         </ListView.ItemTemplate>
                     </ListView>
 
-                    <!-- Select Store Button -->
-                    <ContentView Margin="0, 40, 0, 60">
+                    <!-- Confirm Default Store Button -->
+                    <ContentView Margin="0, 30, 0, 60">
                         <Button Command="{Binding SelectStoreCommand}" BackgroundColor="{StaticResource SpaceGray}" WidthRequest="240"
                             BorderColor="Black" BorderWidth="2"
                             HeightRequest="50" TextColor="White" FontFamily="{StaticResource MediumFont}"
-                            Text="Select Store" Grid.Row="2" HorizontalOptions="Center" VerticalOptions="Start" FontSize="22"/>
+                            Text="Select Store" HorizontalOptions="Center" VerticalOptions="CenterAndExpand" FontSize="22"/>
                     </ContentView>
                 </StackLayout>
             </ContentView>
