--- a/TopShelfCustomer/TopShelfCustomer/Views/LoginPage.xaml
+++ b/TopShelfCustomer/TopShelfCustomer/Views/LoginPage.xaml
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="TopShelfCustomer.Views.LoginPage" xmlns:vm="clr-namespace:TopShelfCustomer.ViewModels" Title="{Binding Title}">
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="TopShelfCustomer.Views.LoginPage"
+             xmlns:vm="clr-namespace:TopShelfCustomer.ViewModels" Title="{Binding Title}">
     <ContentPage.BindingContext>
         <vm:LoginViewModel/>
     </ContentPage.BindingContext>
@@ -22,9 +23,9 @@
 
                 <!-- Header (Label, App Icon, etc.) -->
                 <ContentView HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"
-                         Grid.Row="0" Padding="0, 40, 0, 40" >
+                         Grid.Row="0" Padding="0, 50, 0, 40" >
                     <StackLayout Orientation="Vertical" Spacing="20">
-                        <Image Source="TopShelfAppLogo.png" HeightRequest="100"/>
+                        <Image Source="TopShelfAppLogo.png" HeightRequest="100" Margin="0, 30, 0, 0"/>
                         <Label Text="Log into TopShelf" FontSize="26" HorizontalOptions="Center" TextColor="White" FontFamily="{StaticResource MediumFont}"/>
                     </StackLayout>
                 </ContentView>
