--- a/TopShelfCustomer/TopShelfCustomer.Api/Areas/HelpPage/Views/Help/Index.cshtml
+++ b/TopShelfCustomer/TopShelfCustomer.Api/Areas/HelpPage/Views/Help/Index.cshtml
@@ -25,7 +25,8 @@
         <div class="content-wrapper">
             <h2>Introduction</h2>
             <p>
-                Provide a general description of your APIs here.
+                All of the below API calls are used in the TopShelf grocery delivery client.
+                TopShelf was developed for CS 3773 Software Engineering at the University of Texas at San Antonio.
             </p>
         </div>
     </section>
